--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ios Calculator Practice</title>
-    <link rel="stylesheet" href="./assets/stylesheets/style.css">
+    <link rel="stylesheet" href="./stylesheets/style.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
             </section>
         </div>
     </div>
-    <script src="./assets/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
